# s390x-auto-path

./: CONTRIBUTING.md  LICENSE  README.md  s390x-auto-path.spec  setup.cfg
.github/workflows/: build.yml  lint.yml
docker/: Dockerfile
src/s390x_auto_path/: __init__.py  cli.py  envgen.py  libfix.py  validator.py
tests/: test_basic.py
v2/: README.md  pyproject.toml  setup.cfg
v2/examples/: aws-c-cal-usage.md
v2/src/s390x_auto_path/: __init__.py  cli.py  envgen.py  libfix.py
v3/s390x-v3/: README.md  build_env.sh  setup.cfg
v3/s390x-v3/docs/: CHANGELOG.md
v3/s390x-v3/examples/: aws-c-cal-usage.md
v3/s390x-v3/src/s390x_auto_path/: __init__.py  cli.py  envgen.py  libfix.py
