[metadata]
name = s390x-auto-path
version = 1.1.0
author = IBM OSS Team
description = Automatic lib/lib64 path resolver for s390x builds
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0

[options]
packages = find:
package_dir =
    = src
zip_safe = False
include_package_data = True
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    s390x-auto-path = s390x_auto_path.cli:main
